@@ -8,8 +8,8 @@ Description: Discretely-sampled function is first smoothed.  Features
         cunction at critical points, wiggliness of the function, noise
         in data, and outliers in data.
 Depends: lokern
-Version: 2011.8-2
-Date: 2011-08-17
+Version: 2015.12-1
+Date: 2015-12-01
 Author: Ravi Varadhan, Johns Hopkins University, and MKG Subramaniam,
         AT&T Reserach Labs.
 Maintainer: Ravi Varadhan <rvaradhan@jhmi.edu>
@@ -18,5 +18,6 @@ URL:
 License: GPL (>= 2)
 LazyLoad: yes
 Repository: CRAN
-Date/Publication: 2011-08-17 05:30:24
-Packaged: 2011-08-16 19:27:50 UTC; rvaradh1
+Date/Publication: 2015-12-02 00:01:49
+Packaged: 2015-12-01 21:05:02 UTC; rvaradh1
+NeedsCompilation: no
